--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
             </div>
 
             <!-- a container to display the user's word submissions -->
-            <div id="word-submissions">
-                <!-- TODO 11 add a <submitted-word> component for each word here -->
-                <div class="submitted-word">
-                <template v-for="word in wordSubmissions">
-                    <span>{{ word }}</span> 
-                    <submitted-word :word="word" :score="wordScore(word)" :is-real-word="checkIfWordIsReal(word)"></submitted-word>
-                </template>
-            </div>
-            </div>
+            <div id="word-submissions" v-for="word in wordSubmissions">
+                    {{ word.isRealWord }}
+                    <p>html line 100</p>
+                    <submitted-word :word="word.word" :score="wordScore(word.word)" :loading="word.loading" v-if="word.isRealWord">{{ word }}</submitted-word>
+                </div>
         </section>
     </main>
 
